--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+      <dependency>
+        <groupId>nl.jqno.equalsverifier</groupId>
+        <artifactId>equalsverifier</artifactId>
+        <version>2.4.5</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
