--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.io7m.jxe</groupId>
   <artifactId>com.io7m.jxe</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>com.io7m.jxe</name>
@@ -26,7 +26,7 @@
 
   <properties>
     <io7m.api.previousVersion>0.0.1</io7m.api.previousVersion>
-    <com.io7m.jxe.immutables.version>2.6.0-alpha3</com.io7m.jxe.immutables.version>
+    <com.io7m.jxe.immutables.version>2.6.0</com.io7m.jxe.immutables.version>
   </properties>
 
   <inceptionYear>2017</inceptionYear>
@@ -93,7 +93,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.8.0-beta1</version>
+        <version>1.8.0-beta2</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -109,7 +109,7 @@
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
         <artifactId>equalsverifier</artifactId>
-        <version>2.4.5</version>
+        <version>2.4.6</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
