--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
         <artifactId>logback-classic</artifactId>
         <version>1.3.0-alpha4</version>
       </dependency>
+      <dependency>
+        <groupId>com.io7m.immutables.style</groupId>
+        <artifactId>com.io7m.immutables.style</artifactId>
+        <version>0.0.1</version>
+      </dependency>
 
       <dependency>
         <groupId>junit</groupId>
