--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.io7m.primogenitor</groupId>
     <artifactId>com.io7m.primogenitor.full</artifactId>
-    <version>3.5.0</version>
+    <version>5.0.0</version>
   </parent>
 
   <groupId>com.io7m.jxe</groupId>
@@ -25,8 +25,9 @@
   </modules>
 
   <properties>
-    <io7m.api.previousVersion>0.0.1</io7m.api.previousVersion>
+    <com.codacy.id>6e6f69d7eb5d41e9a2ceb3fa28ab7b0a</com.codacy.id>
     <com.io7m.jxe.immutables.version>2.6.0</com.io7m.jxe.immutables.version>
+    <io7m.api.previousVersion>0.0.1</io7m.api.previousVersion>
   </properties>
 
   <inceptionYear>2017</inceptionYear>
@@ -108,7 +109,7 @@
       <dependency>
         <groupId>com.io7m.primogenitor</groupId>
         <artifactId>com.io7m.primogenitor.support</artifactId>
-        <version>3.5.0</version>
+        <version>5.0.0</version>
       </dependency>
 
       <dependency>
@@ -127,14 +128,11 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!-- Require JDK >= 11 -->
+        <!-- Add annotation processors. -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>11</source>
-            <target>11</target>
-            <release>11</release>
             <annotationProcessorPaths>
               <dependency>
                 <groupId>org.immutables</groupId>
