--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
   </distributionManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/io7m/jxe</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/jxe/actions</url>
   </ciManagement>
 
   <prerequisites>
