--- a/com.io7m.jxe.documentation/pom.xml
+++ b/com.io7m.jxe.documentation/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.io7m.jxe</groupId>
     <artifactId>com.io7m.jxe</artifactId>
-    <version>0.0.2</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>com.io7m.jxe.documentation</artifactId>
