--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.io7m.jxe</groupId>
   <artifactId>com.io7m.jxe</artifactId>
-  <version>0.0.2</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>com.io7m.jxe</name>
@@ -28,6 +28,7 @@
     <com.codacy.id>6e6f69d7eb5d41e9a2ceb3fa28ab7b0a</com.codacy.id>
     <com.io7m.jxe.immutables.version>2.6.0</com.io7m.jxe.immutables.version>
     <io7m.api.previousVersion>0.0.1</io7m.api.previousVersion>
+    <junit.version>5.7.0</junit.version>
   </properties>
 
   <inceptionYear>2017</inceptionYear>
@@ -113,9 +114,14 @@
       </dependency>
 
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13</version>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
