--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,16 @@
   </modules>
 
   <properties>
-    <com.io7m.jxe.immutables.version>2.6.0</com.io7m.jxe.immutables.version>
+    <com.io7m.jxe.immutables.version>2.9.3</com.io7m.jxe.immutables.version>
     <io7m.api.previousVersion>0.0.1</io7m.api.previousVersion>
-    <junit.version>5.8.1</junit.version>
+    <junit.version>5.9.3</junit.version>
   </properties>
 
   <inceptionYear>2017</inceptionYear>
 
   <licenses>
     <license>
-      <name>ISC License</name>
+      <name>ISC</name>
       <url>http://io7m.com/license/isc.txt</url>
     </license>
   </licenses>
@@ -94,12 +94,12 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.7</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.4.1</version>
+        <version>1.4.7</version>
       </dependency>
       <dependency>
         <groupId>com.io7m.immutables.style</groupId>
@@ -125,7 +125,7 @@
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
         <artifactId>equalsverifier</artifactId>
-        <version>3.10</version>
+        <version>3.14.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
