--- a/README.in
+++ b/README.in
@@ -50,7 +50,7 @@ on incoming data:
 
 ### Usage
 
-The jxe package allows applications to enforce all of the above requirements
+The `jxe` package allows applications to enforce all of the above requirements
 via a very simple API:
 
 ```
