--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
   </licenses>
 
   <scm>
-    <url>https://www.github.com/io7m/jxe</url>
-    <connection>scm:git:https://github.com/io7m/jxe</connection>
-    <developerConnection>scm:git:https://github.com/io7m/jxe</developerConnection>
+    <url>https://www.github.com/io7m-com/jxe</url>
+    <connection>scm:git:https://www.github.com/io7m-com/jxe</connection>
+    <developerConnection>scm:git:https://www.github.com/io7m-com/jxe</developerConnection>
   </scm>
 
   <developers>
@@ -56,7 +56,7 @@
   </developers>
 
   <issueManagement>
-    <url>https://www.github.com/io7m/jxe/issues</url>
+    <url>https://www.github.com/io7m-com/jxe/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -78,7 +78,7 @@
 
   <ciManagement>
     <system>GitHub Actions</system>
-    <url>https://github.com/jxe/actions</url>
+    <url>https://www.github.com/io7m-com/jxe/actions</url>
   </ciManagement>
 
   <prerequisites>
