--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.io7m.jxe</groupId>
   <artifactId>com.io7m.jxe</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>com.io7m.jxe</name>
@@ -21,6 +21,7 @@
   <modules>
     <module>com.io7m.jxe.core</module>
     <module>com.io7m.jxe.tests</module>
+    <module>com.io7m.jxe.tests.xerces</module>
   </modules>
 
   <properties>
@@ -115,6 +116,12 @@
         <version>8.2.0</version>
       </dependency>
 
+      <dependency>
+        <groupId>xerces</groupId>
+        <artifactId>xercesImpl</artifactId>
+        <version>2.12.2</version>
+      </dependency>
+
       <!-- Build metadata. -->
       <dependency>
         <groupId>org.osgi</groupId>
@@ -128,14 +135,11 @@
       </dependency>
 
       <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
         <version>${junit.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>${junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>nl.jqno.equalsverifier</groupId>
