--- a/com.io7m.jxe.core/pom.xml
+++ b/com.io7m.jxe.core/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.io7m.jxe</groupId>
     <artifactId>com.io7m.jxe</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>com.io7m.jxe.core</artifactId>
